# sotto

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  README.md  RUNNING.md  Sotto Marshmallow.dc.html  Sotto Marshmallow.html  package-lock.json  run-sotto.bat  tauri.conf.json
.cargo/: config.toml
capabilities/: default.json
docs/: design-brief.md  marshmallow-spec-extracted.md  msvc-setup.md  roadmap.md  ui-rework-plan.md  updating.md
docs/images/design_handoff_sotto/: README.md  Sotto.dc.html
examples/: whisper_probe.rs
icons/: icon.icns
nsis/: hooks.nsi
scripts/: check-hidden.py  gen-icons.mjs  make-asset-bundles.ps1  make-icons.ps1  make-latest-json.ps1  msvc-avx2-toolchain.cmake  serve-ui.mjs  setup-msvc.ps1  sotto-cleanup.ps1
src/: asr.rs  assets.rs  audio.rs  config.rs  history.rs  hotkey.rs  inject.rs  job.rs  llm.rs  main.rs  overlay.rs  polish.rs  settings.rs  single_instance.rs  sounds.rs  startup.rs  stats.rs  tray.rs
ui/: fonts.css  index.css  index.html  index.js  menu.html  menu.js  overlay.html  overlay.js  preview.html  settings.css  settings.html  settings.js  theme.css
